--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "A nodejs project using gallery-dl for downloading pinterest pins",
   "main": "src/app.ts",
   "scripts": {
-    "build": "tsc && node dist/app.js"
+    "start": "nodemon",
+    "build": "tsc"
   },
   "repository": {
     "type": "git",
@@ -13,12 +14,14 @@
   "author": "Arajdian Altaf",
   "license": "ISC",
   "devDependencies": {
+    "@types/express": "^4.17.17",
     "@typescript-eslint/eslint-plugin": "^5.59.11",
     "eslint": "^8.43.0",
     "eslint-config-standard-with-typescript": "^35.0.0",
     "eslint-plugin-import": "^2.27.5",
     "eslint-plugin-n": "^15.7.0",
     "eslint-plugin-promise": "^6.1.1",
+    "ts-node": "^10.9.1",
     "typescript": "^5.1.3"
   },
   "dependencies": {
