--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "typescript": "^5.1.3"
   },
   "dependencies": {
+    "axios": "^1.4.0",
     "ejs": "^3.1.9",
     "express": "^4.18.2"
   }
