--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   "author": "Arajdian Altaf",
   "license": "ISC",
   "devDependencies": {
+    "@types/ejs": "^3.1.2",
     "@types/express": "^4.17.17",
     "@typescript-eslint/eslint-plugin": "^5.59.11",
     "eslint": "^8.43.0",
